<resources>
    <string name="app_name">B07 Demo Summer 2024</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="back">Back</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="scroller">Scroller</string>
    <string name="spinner">Spinner</string>
    <string name="manage_items">Manage Items</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="eco_tracker">EcoTracker</string>
    <string name="transportation">Transportation Activities</string>
    <string name="foodConsumption">Food Consumption Activities</string>
    <string name="consumptionAndShopping">Consumption and Shopping Activities</string>
    <string name="personalVehicle">Drive Personal Vehicle</string>
    <string name="publicTransportation">Take Public Transportation</string>
    <string name="cyclingWalking">Cycling or walking</string>
    <string name="flight">Flight (Short-Haul or Long-Haul)</string>
    <string name="clothes">Buying New Clothes</string>
    <string name="electronics">Buying New Electronics</string>
    <string name="miscellaneous">Buying Miscellaneous Items</string>
    <string name="bills">Bills (Electricity, Gas, Hydro)</string>
    <string name="bills_prompt">Enter Bill Amount:</string>
    <string name="submit">Submit</string>

    <string-array name="categories_array">
        <item>Books</item>
        <item>Movies</item>
    </string-array>

    <string-array name="distance_units">
        <item>km</item>
        <item>miles</item>
    </string-array>

    <string-array name="vehicle_types">
        <item>Gasoline</item>
        <item>Diesel</item>
        <item>Hybrid</item>
        <item>Electric</item>
        <item>I do not know</item>
    </string-array>

    <string-array name="public_transport">
        <item>bus</item>
        <item>train</item>
        <item>subway</item>
    </string-array>

    <string-array name="time_units">
        <item>minutes</item>
        <item>hours</item>
    </string-array>

    <string-array name="flight_haul">
        <item>Short-haul (&lt;1,500 km)</item>
        <item>Long-haul (&gt;1,500 km)</item>
    </string-array>

    <string name="meal">Meal</string>
    <string-array name="meal_types">
        <item>Beef</item>
        <item>Pork</item>
        <item>Chicken</item>
        <item>Fish</item>
        <item>Plant-Based</item>
    </string-array>

    <string-array name="bill_types">
        <item>Electricity</item>
        <item>Gas</item>
        <item>Water</item>
    </string-array>


    <string-array name="bill_types">
        <item>Electricity</item>
        <item>Gas</item>
        <item>Water</item>
    </string-array>





</resources>