<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.widget.Button
        android:id="@+id/buttonTransportation"
        style="@style/SurveyButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/transportation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <android.widget.Button
        style="@style/SurveyButton"
        android:id="@+id/buttonFoodConsumption"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/foodConsumption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466" />

    <android.widget.Button
        style="@style/SurveyButton"
        android:id="@+id/buttonConsumptionAndShopping"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/consumptionAndShopping"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663" />
    <android.widget.Button
        style="@style/SurveyButton"
        android:id="@+id/buttonDailyCO2eDisplay"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="Daily CO2e Emission Display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />
</androidx.constraintlayout.widget.ConstraintLayout>